--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /* ---------- App ---------- */
 
 .App {
-  width: 100%;
+  width: 103vw;
   height: 100%;
 }
 
@@ -328,7 +328,7 @@ li {
 
 .mag-top {
   width: 100%;
-  height: 600px;
+  height: 45vw;
   padding: 0px 13vw;
   background-color: #fff;
   display: flex;
@@ -339,6 +339,8 @@ li {
   width: 50%;
   height: 100%;
   padding: 0px 10px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .mag-scroll-right {
@@ -1048,7 +1050,7 @@ li {
 @media only screen and (max-width: 1250px) {
   .mag-scroll-right {
     width: 40%;
-    height: 20vw;
+    height: 45vw;
     padding: 0px 0px;
   }
   .mag-scroll-row-vertical {
@@ -1079,19 +1081,19 @@ li {
   }
   .mag-h3 {
     width: 100%;
-    height: 20%;
+    height: 15%;
     margin-bottom: 0px;
     font-size: 13px;
   }
   .mag-h2 {
     width: 100%;
-    height: 50%;
+    height: 70%;
     margin-bottom: 0px;
     font-size: 18px;
   }
   .mag-h4 {
     width: 100%;
-    height: 30%;
+    height: 15%;
     margin-bottom: 0px;
     font-size: 11px;
   }
@@ -1168,7 +1170,7 @@ li {
   /* ------ Magazine ------ */
   .mag-top {
     height: auto;
-    max-height: 1200px;
+    max-height: 4000px;
     padding: 0px 25vw;
     display: flex;
     flex-direction: column;
@@ -1183,6 +1185,12 @@ li {
   .mag-scroll-right {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+  }
+  .mag-scroll-row-vertical {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 0px;
   }
   .mag-img-cover {
     display: flex;
@@ -1300,6 +1308,10 @@ li {
   }
   .about-us-title-logo {
     height: 180px;
+  }
+  /* ------ Magazine ------ */
+  .mag-top {
+    padding: 0px 20vw;
   }
   /* ------ Learning ------ */
   .intro {
@@ -1447,6 +1459,10 @@ li {
   .about-us-title-logo {
     height: 150px;
   }
+  /* ------ Magazine ------ */
+  .mag-top {
+    padding: 0px 16vw;
+  }
   /* ------ Learning ------ */
   .intro {
     padding: 0px 14vw;
@@ -1543,6 +1559,10 @@ li {
     width: 80%;
     font-size: 2.7vw;
   }
+  /* ------ Magazine ------ */
+  .mag-top {
+    padding: 0px 14vw;
+  }
   /* ------ Learning ------ */
   .intro {
     padding: 0px 14vw;
@@ -1633,6 +1653,10 @@ li {
   }
   .about-us-span-text {
     font-size: 3vw;
+  }
+  /* ------ Magazine ------ */
+  .mag-top {
+    padding: 0px 10vw;
   }
   /* ------ Learning ------ */
   .intro {
