--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -11,9 +11,9 @@
 /* ---------- Section's Headers ---------- */
 
 .section {
-  width: 100%;
+  width: 103%;
   height: auto;
-  padding: 20px 150px 0px;
+  padding: 20px 15vw 0px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -70,7 +70,7 @@
   width: 100%;
   color: #000000;
   font-size: 18px;
-  padding: 10px 0px;
+  padding: 20px 0px;
   text-align: justify;
   font-family: "Roboto", sans-serif;
 }
@@ -151,7 +151,6 @@
 .credits {
   padding-top: 100px;
   width: 100%;
-  background-color: #f6f6f6;
 }
 
 .credits-img {
@@ -350,6 +349,15 @@
   line-height: normal;
 }
 
+.crisis-right-span {
+  /* width: 100%; */
+  height: 50%;
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  text-align: justify;
+  font-size: 18px;
+}
+
 .protag-span-aurora {
   width: 100%;
   height: auto;
@@ -503,7 +511,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 30px 10px;
 }
 
 .despiertas-img {
@@ -554,9 +561,10 @@
 }
 
 .historicas-img {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   height: auto;
-  object-fit: scale-down;
+  object-fit: contain;
 }
 
 /* ---------- ReadNext ---------- */
@@ -605,4 +613,140 @@
 
 .arrow-left:hover, .arrow-right:hover {
   color: #d969d9;
+}
+
+/* ------------------------ Media Queries ------------------------ */
+
+@media only screen and (max-width: 880px) {
+  .section {
+    padding: 20px 10vw 0px;
+  }
+  .section-h1 {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .section-span {
+    font-size: 20px;
+    padding: 10px 0px;
+  }
+  .protag-h3 {
+    font-size: 20px;
+  }
+  .protag-h2-work-future {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .protag-h2-crisis {
+    font-size: 30px;
+    margin-bottom: 0px;
+  }
+  .section-div-split {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0px 0px;
+  }
+  .protag-div-left {
+    width: 100%;
+    padding: 0px 0px 30px;
+  }
+  .protag-div-right {
+    width: 100%;
+    padding: 0px 0px;
+  }
+  .protag-div-top {
+    margin: 80px 0px 0px;
+  }
+  .protag-div-bottom {
+    margin: 0px 0px 60px;
+  }
+  .protag-span-left {
+    font-size: 25px;
+    letter-spacing: 0px;
+    padding: 0px 0px 0px;
+  }
+  .protag-span-right {
+    width: 100%;
+    height: 100%;
+    text-align: justify;
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+  .protag-span-aurora {
+    font-size: 20px;
+  }
+  .crisis-left {
+    width: 100%;
+    padding: 0px 0px 30px;
+  }
+  .crisis-right {
+    width: 100%;
+    padding: 0px 0px 30px;
+  }
+  .crisis-left-span {
+    font-size: 25px;
+  }
+  .crisis-right-span {
+    width: 100%;
+    height: 50%;
+    font-family: "Roboto", sans-serif;
+    color: #000000;
+    text-align: justify;
+    font-size: 20px;
+  }
+  .protag-last-div-left {
+    width: 100%;
+    padding: 0px 0px 30px;
+  }
+  .last-span-left {
+    font-size: 25px;
+  }
+  .section-div-half {
+    width: 100%;
+    height: 100%;
+  }
+  .section-div-half-right {
+    letter-spacing: -2px;
+    font-size: 30px;
+    padding: 0px 0px 30px;
+    line-height: normal;
+  }
+  .section-div-half-left {
+    padding: 0px 0px 20px;
+    font-size: 20px;
+  }
+  .read-next-div.previous {
+    padding-right: 50px;
+  }
+  .read-next-div.next {
+    padding-left: 50px;
+  }
+  .credits {
+    display: none;
+  }
+  .creamos-text-div-micro {
+    display: flex;
+    flex-direction: column;
+  }
+  .creamos-div-left, .creamos-div-right {
+    width: 100%;
+    padding: 0px;
+  }
+  .creamos-div-right {
+    margin-bottom: 30px;
+  }
+  .creamos-span-fabiola {
+    font-size: 25px;
+  }
+  .creamos-span {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .historicas-img {
+    max-width: none;
+  }
 }
