--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 /* ---------- Temporal ---------- */
 
+/* 
 .temporal-div {
   display: none;
   width: 100%;
@@ -18,7 +19,7 @@
 .temporal-img {
   width: 100%;
   object-fit: contain;
-}
+} */
 
 /* ---------- Header ---------- */
 
