--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /* ---------- App ---------- */
 
 .App {
-  width: 104%;
+  width: 100%;
   height: 100%;
 }
 
@@ -144,7 +144,7 @@ li {
 }
 
 .home-scroll-container {
-  width: 103%;
+  width: 100%;
   height: auto;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -161,7 +161,7 @@ li {
 /* ---------- About Us ---------- */
 
 .about-us-container {
-  width: 103%;
+  width: 100%;
   height: auto;
 }
 
@@ -308,7 +308,7 @@ li {
 /* ---------- Magazine ---------- */
 
 .magazine {
-  width: 103%;
+  width: 100%;
   padding: 80px 0px 0px;
   margin-bottom: 50px;
   height: auto;
@@ -408,6 +408,7 @@ li {
   font-family: 'Open Sans', sans-serif;
   color: #630164;
   line-height: 1;
+  text-transform: uppercase;
 }
 
 .mag-h4 {
@@ -419,6 +420,7 @@ li {
   font-weight: lighter;
   font-family: "Roboto", sans-serif;
   color: #4d4d4d;
+  text-transform: uppercase;
 }
 
 .mag-h4-historicas {
@@ -495,6 +497,7 @@ li {
   font-family: 'Open Sans', sans-serif;
   color: #630164;
   line-height: 1;
+  margin-top: 8px;
 }
 
 .historical-section {
@@ -537,7 +540,7 @@ li {
 /* ---------- Learning ---------- */
 
 .learning {
-  width: 103%;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column !important;
@@ -725,7 +728,7 @@ li {
 /* ---------- Profiles ---------- */
 
 .profile {
-  width: 103%;
+  width: 100%;
   height: auto;
   padding-top: 40px;
 }
@@ -859,7 +862,7 @@ li {
 
 .subscribe {
   bottom: auto;
-  width: 103%;
+  width: 100%;
   height: auto;
   padding-top: 60px;
   background-color: #1a1a1a;
@@ -965,7 +968,7 @@ li {
 /* ---------- Footer ---------- */
 
 .footer {
-  width: 103%;
+  width: 100%;
   height: auto;
   position: inherit;
   bottom: 0px;
@@ -1012,6 +1015,7 @@ li {
 
 .footer-img-anlogo {
   width: 100px;
+  height: auto;
   margin: 10px 0px;
 }
 
@@ -1055,6 +1059,7 @@ li {
   .mag-ver-div-col.left {
     width: 100%;
     height: auto;
+    padding-left: 0px;
   }
   .mag-ver-div-col.right {
     padding-left: 0px;
@@ -1634,6 +1639,7 @@ li {
   }
   .footer-img-anlogo {
     width: 170px;
+    height: auto;
     padding: 20px 0px;
   }
 }
@@ -1649,6 +1655,9 @@ li {
   /* ------ Magazine ------ */
   .mag-top {
     padding: 0px 10vw;
+  }
+  .mag-ver-div-col.left {
+    padding-right: 0px;
   }
   /* ------ Learning ------ */
   .intro {
@@ -1670,6 +1679,7 @@ li {
   /* ------ Footer ------ */
   .footer-img-anlogo {
     width: 200px;
+    height: auto;
   }
   .footer-img-rdlogo {
     padding: 20px 0px;
