--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -11,7 +11,7 @@
 /* ---------- Section's Headers ---------- */
 
 .section {
-  width: 103%;
+  width: 100%;
   height: auto;
   padding: 20px 15vw 0px;
   background-color: #fff;
@@ -29,6 +29,7 @@
   font-family: 'Open Sans', sans-serif;
   color: #4d4d4d;
   font-size: 35px;
+  text-transform: uppercase;
 }
 
 .section-h2 {
