--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -84,6 +84,7 @@
   display: flex;
   padding: 30px 0px;
   justify-content: space-between;
+  align-items: center;
 }
 
 .section-div-half {
@@ -98,7 +99,7 @@
   font-style: italic;
   font-weight: bold;
   font-size: 30px;
-  padding: 100px 20px 0px;
+  padding: 0px 20px 0px;
   color: #000000;
   text-align: justify;
   line-height: normal;
@@ -145,6 +146,12 @@
   color: #000000;
   text-align: justify;
   line-height: normal;
+}
+
+/* Estilo especial para seccion editorial revista 2 */
+
+.img-protag {
+  object-position: top;
 }
 
 /* ---------- Credits ---------- */
@@ -428,6 +435,14 @@
   display: flex;
   flex-direction: column;
   margin-top: 50px;
+}
+
+/* Estilo especial para seccion Hablamos de Revista 2 */
+
+.hablamos-division {
+  border-top: solid #D969D9;
+  border-width: 1px;
+  margin: 5vw 0px 9vw;
 }
 
 /* ---------- Creamos ---------- */
