--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -525,7 +525,7 @@
 
 .despiertas-div {
   width: 100%;
-  height: auto;
+  height: fit-content;
   display: flex;
   justify-content: center;
 }
@@ -573,7 +573,7 @@
 /* ---------- Historicas ---------- */
 
 .historicas-img-div {
-  height: auto;
+  height: fit-content;
   width: 100%;
   display: flex;
   justify-content: center;
