--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -573,8 +573,8 @@
 /* ---------- Historicas ---------- */
 
 .historicas-img-div {
-  height: fit-content;
   width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
 }
@@ -768,5 +768,11 @@
 @media only screen and (max-width: 600px) {
   .historicas-img {
     max-width: none;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .historicas-img-div {
+    height: fit-content;
   }
 }
